infrastructure/storage/cluster/rook-ceph.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: rook-ceph
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  rules:
  - host: rook-ceph.staging.stplabs.io
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rook-ceph.staging.stplabs.io
    secretName: rook-ceph-tls
